remove autofocus from login username input and change font size for all inputs to prevent resizing on mobile

--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -15,6 +15,9 @@ h1 {
 p, h2, label, .username-rules {
   text-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 }
+.input {
+  font-size: 16px;
+}
 .glyphicon {
   margin-right: 10px;
 }
